--- a/GlobalEvents/GlobalEvents/Views/Events/MapView.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/MapView.cshtml
@@ -4,6 +4,10 @@
 
 <br />
 <br />
+
+<h4>En el siguiente mapa usted encontrará los eventos en un radio de 2.5km desde su posición. 
+    Los mismos tienen hoy como fecha de inicio</h4>
+
 <div id="map" style="width:100%;height:600px;"></div>
 
 <script>
@@ -16,25 +20,29 @@
 
         var map = new google.maps.Map(document.getElementById('map'), {
             center: { lat: -30.944932, lng: -61.562566 },
-            zoom: 17
+            zoom: 14
         });
 
         var infoWindow = new google.maps.InfoWindow({ map: map });
 
+
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function (position) {
-                var pos = {
+                    pos = {
                     lat: position.coords.latitude,
                     lng: position.coords.longitude
                 };
+                position.lat = pos.lat;
+                position.lng = pos.lng;
 
                 var marker = new google.maps.Marker({
                     position: pos,
                     map: map,
-                    title: 'Ubicación encontrada'
+                    title: 'Usted está aquí'
                 });
                 map.setCenter(pos);
+                showPosition(pos);
             }, function () {
                 handleLocationError(true, infoWindow, map.getCenter());
             });
@@ -44,25 +52,30 @@
         }
 
 
-        var data = [];
-        $.ajax({
-            url: '@Url.Content("~/Events/GetEvents")',
-            dataType: 'json',
-            async: true,
-            success: function(info) {
-                info.forEach(function(x) {
-                    var marker = new google.maps.Marker({
-                        position: {
-                            lat: parseFloat(x.lat),
-                            lng: parseFloat(x.lng)
-                        },
-                        map: map,
-                        title: x.EventName
+        function showPosition(position) {
+            var data = [];
+            $.ajax({
+                url: "/Events/GetEventsForMap",
+                dataType: 'json',
+                async: true,
+                data: { 'lat': position.lat, 'lng': position.lng },
+                success: function (info) {
+                    info.forEach(function (x) {
+                        var marker = new google.maps.Marker({
+                            position: {
+                                lat: parseFloat(x.lat),
+                                lng: parseFloat(x.lng)
+                            },
+                            map: map,
+                            title: x.NombreEvento
+                        });
                     });
-                });              
-            }
-        });
+                }
+            });
+        }
     }
+
+    
 
     function handleLocationError(browserHasGeolocation, infoWindow, pos) {
         infoWindow.setPosition(pos);
@@ -70,7 +83,6 @@
             'Error: The Geolocation service failed.' :
             'Error: Your browser doesn\'t support geolocation.');
     }
-
 
 
 </script>
