--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
                     {
                         <li class="@Html.IsSelected(controllers: "Events", actions: "Mios", cssClass: "active")">@Html.ActionLink("Mis eventos", "Mios", "Events", new { area = "" }, null)</li>
                     }
+                    <li class="@Html.IsSelected(controllers: "Events", cssClass: "active")">@Html.ActionLink("Mapa", "MapView", "Events", new { area = "" }, null)</li>
                 </ul>
 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
