--- a/GlobalEvents/GlobalEvents/Views/Events/Listado.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Listado.cshtml
@@ -65,7 +65,7 @@
                     </td>
 
                     <td>
-                        @Html.ActionLink("Habilitar", "HabilitarEvento", new { id = item.Id })
+                        @Html.ActionLink("Habilitar", "Habilitar", new { id = item.Id })
                     </td>
                 </tr>
             }
