--- a/GlobalEvents/GlobalEvents/Views/Events/Listado.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Listado.cshtml
@@ -9,6 +9,7 @@
 <br />
 
 <div class="card">
+    <div class="card-title center-align">Eventos pendientes de aprobación</div>
     <div class="card-content">
         <table class="table striped">
             <thead class="thead-inverse">
