--- a/GlobalEvents/GlobalEvents/Views/Events/Destacados.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Destacados.cshtml
@@ -37,7 +37,7 @@
                             <div class="card-content white-text">
                                 <h8 class="white-text"><i class="@Html.getIcon(@Html.DisplayFor(modelItem => item.IdCategoria).ToString())"></i> @Html.DisplayFor(modelItem => item.IdCategoria)</h8>
                                 <span class="card-title text-darken-4">@Html.DisplayFor(modelItem => item.NombreEvento)</span>
-                                <p class="card-subtitle text-darken-2">@Html.DisplayFor(modelItem => item.Descripcion)</p>
+                                <p class="card-subtitle text-darken-2">@Html.Raw("<pre>" + Html.Encode(item.Descripcion) + "</pre>")</p>
                                 <p class="card-text"><small class="text-muted">Creado por @Html.getNameUser(id: @Html.DisplayFor(modelItem => item.IdUser).ToString())</small></p>
                                 <hr />
 
@@ -70,7 +70,7 @@
                             <div class="card-content black-text">
                                 <h8 class="black-text"><i class="@Html.getIcon(@Html.DisplayFor(modelItem => item.IdCategoria).ToString())"></i> @Html.DisplayFor(modelItem => item.IdCategoria)</h8>
                                 <span class="card-title grey-text text-darken-4">@Html.DisplayFor(modelItem => item.NombreEvento)</span>
-                                <p class="card-subtitle grey-text text-darken-2">@Html.DisplayFor(modelItem => item.Descripcion)</p>
+                                <p class="card-subtitle grey-text text-darken-2">@Html.Raw("<pre>" + Html.Encode(item.Descripcion) + "</pre>")</p>
                                 <p class="card-text"><small class="text-muted">Creado por @Html.getNameUser(id: @Html.DisplayFor(modelItem => item.IdUser).ToString())</small></p>
                                 <hr />
 
